--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dev_dependencies:
   shouldly: ^0.5.0+1
   build_runner: ^2.3.0
   json_serializable: ^6.5.1
+  given_when_then_unit_test: ^0.1.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
